# CompsciFall2017

./: CMakeLists.txt  README.md
src/: Pr01-Egg-Agopian-Armand.txt  Pr02b-Hello-Agopian-Armand.cpp  Pr03a-Patient-Agopian-Armand.cpp  Pr03b-Vote-Agopian-Armand.cpp  Pr04a-Temp-Agopian-Armand.cpp  Pr04b-FV-Agopian-Armand.cpp  Pr05a-Client-Agopian-Armand.cpp  Pr06a-Tax-Agopian-Armand.cpp  Pr06b-Avg-Agopian-Armand.cpp  Pr06c-Leap-Agopian-Armand.cpp  Pr07a-Vac-Agopian-Armand.cpp  Pr07b-Timer-Agopian-Armand.cpp  Pr07c-Int-Agopian-Armand.cpp  Pr08a-Pop-Agopian-Armand.bat  Pr08a-Pop-Agopian-Armand.cpp  Pr08b-Leap-Agopian-Armand.bat  Pr08b-Leap-Agopian-Armand.cpp  Pr09a-Max-Agopian-Armand.cpp  Pr09b-ASCII-Agopian-Armand.cpp  Pr09x-Round1.cpp.cpp  Pr09x-Round2.cpp.cpp  Pr09x-Size.cpp  Pr10a-Elec-Agopian-Armand,in  Pr10a-Elec-Agopian-Armand.cpp  Pr10a-Elec-Agopian-Armand.cpp.cpp  Pr10b-Water-Agopian-Armand.cpp  Pr10b-Water-Agopian-Armand.in  Pr10b-Water-Agopian-Armand.out  Pr11a-RevProf-Agopian-Armand.cpp  Pr11a-RevProf-Agopian-Armand.in  Pr11b-RevProf-Agopian-Armand.cpp  Pr11b-RevProf-Agopian-Armand.in  Pr11x-Score.cpp  Pr11x-Score.in  Pr12a-Weather-Agopian-Armand.cpp  Pr12a-Weather.in  Pr12b-Weather-Agopian-Armand.cpp  Pr13a-Pres-Agopian-Armand.cpp  Pr13a-Pres.in  Pr13b-Pres-Agopian-Armand.cpp  (+6 more)
src/Extra/: Pr04a2-Vote.cpp
src/Extra/Pr03b2-Vote-Java/: ElectionResults.java
src/Pr03b2-Vote-Agopian-Armand-Java/: Candidate.java
