cmake_minimum_required(VERSION 3.8)
project(CompSciFall2017)

set(CMAKE_CXX_STANDARD 11)

add_executable(Pr02a-Small src/Pr02a-Small.cpp)
add_executable(Pr02b-Hello-Agopian-Armand src/Pr02b-Hello-Agopian-Armand.cpp)
add_executable(Pr03a-Patient-Agopian-Armand src/Pr03a-Patient-Agopian-Armand.cpp)
add_executable(Pr03b-Vote-Agopian-Armand src/Pr03b-Vote-Agopian-Armand.cpp)
add_executable(Pr04a-Temp-Agopian-Armand src/Pr04a-Temp-Agopian-Armand.cpp)
add_executable(Pr04b-FV-Agopian-Armand src/Pr04b-FV-Agopian-Armand.cpp)
add_executable(Pr05a-Client-Agopian-Armand src/Pr05a-Client-Agopian-Armand.cpp)
add_executable(Pr06a-Tax-Agopian-Armand src/Pr06a-Tax-Agopian-Armand.cpp)
add_executable(Pr06b-Avg-Agopian-Armand src/Pr06b-Avg-Agopian-Armand.cpp)
add_executable(Pr06c-Leap-Agopian-Armand src/Pr06c-Leap-Agopian-Armand.cpp)
add_executable(Pr07a-Vac-Agopian0Armand src/Pr07a-Vac-Agopian-Armand.cpp)
add_executable(Pr07b-Timer-Agopian-Armand src/Pr07b-Timer-Agopian-Armand.cpp)