cmake_minimum_required(VERSION 3.8)
project(CompSciFall2017)

set(CMAKE_CXX_STANDARD 11)

add_executable(Pr02a-Small src/Pr02a-Small.cpp)
add_executable(Pr02b-Hello-Agopian-Armand src/Pr02b-Hello-Agopian-Armand.cpp)
add_executable(Pr03a-Patient-Agopian-Armand src/Pr03a-Patient-Agopian-Armand.cpp)
add_executable(Pr03b-Vote-Agopian-Armand src/Pr03b-Vote-Agopian-Armand.cpp)
add_executable(Pr04a-Temp-Agopian-Armand src/Pr04a-Temp-Agopian-Armand.cpp)
add_executable(Pr04b-FV-Agopian-Armand src/Pr04b-FV-Agopian-Armand.cpp)
add_executable(Pr05a-Client-Agopian-Armand src/Pr05a-Client-Agopian-Armand.cpp)
add_executable(Pr06a-Tax-Agopian-Armand src/Pr06a-Tax-Agopian-Armand.cpp)
add_executable(Pr06b-Avg-Agopian-Armand src/Pr06b-Avg-Agopian-Armand.cpp)
add_executable(Pr06c-Leap-Agopian-Armand src/Pr06c-Leap-Agopian-Armand.cpp)
add_executable(Pr07a-Vac-Agopian-Armand src/Pr07a-Vac-Agopian-Armand.cpp)
add_executable(Pr07b-Timer-Agopian-Armand src/Pr07b-Timer-Agopian-Armand.cpp)
add_executable(Pr07c-Int-Agopian-Armand src/Pr07c-Int-Agopian-Armand.cpp)
add_executable(Pr08a-Pop-Agopian-Armand src/Pr08a-Pop-Agopian-Armand.cpp)
add_executable(Pr08b-Leap-Agopian-Armand src/Pr08b-Leap-Agopian-Armand.cpp)
add_executable(Pr09x-Size src/Pr09x-Size.cpp)
add_executable(Pr09a-Max-Agopian-Armand src/Pr09a-Max-Agopian-Armand.cpp)
add_executable(Pr09b-ASCII-Agopian-Armand src/Pr09b-ASCII-Agopian-Armand.cpp)
add_executable(Pr09x-Round1.cpp src/Pr09x-Round1.cpp.cpp)
add_executable(Pr09x-Round2.cpp src/Pr09x-Round2.cpp.cpp)
add_executable(Pr10a-Elec-Agopian-Armand.cpp src/Pr10a-Elec-Agopian-Armand.cpp.cpp)